--- a/src/android/frameworks/pgm-custom.gradle
+++ b/src/android/frameworks/pgm-custom.gradle
@@ -42,6 +42,7 @@ android {
   props.setProperty("GOOGLE_MAPS_PLAY_SERVICES_VERSION", "16.0.0");
   props.setProperty("ANDROID_SUPPORT_V4_VERSION", "27.1.1");
   props.setProperty("GOOGLE_MAPS_ANDROID_SDK", "");
+  props.setProperty("GOOGLE_LOCATION_PLAY_SERVICES_VERSION", "16.0.0");
 
   widget.preference.each { pref ->
     def name = pref.attributes().name
@@ -52,7 +53,7 @@ android {
       props.setProperty(name, value)
     }
     if (name == "GOOGLE_MAPS_PLAY_SERVICES_VERSION" ||
-        name == "ANDROID_SUPPORT_V4_VERSION") {
+        name == "ANDROID_SUPPORT_V4_VERSION" || name == "GOOGLE_LOCATION_PLAY_SERVICES_VERSION") {
       props.setProperty(name, value)
     }
     if (name == "GOOGLE_MAPS_ANDROID_SDK") {
@@ -90,7 +91,7 @@ android {
   println("---->ANDROID_SUPPORT_V4_VERSION = ${ANDROID_SUPPORT_V4_VERSION}")
   dependencies {
     implementation "com.google.android.gms:play-services-maps:${PLAY_SERVICES_VERSION}"
-    implementation "com.google.android.gms:play-services-location:${PLAY_SERVICES_VERSION}"
+    implementation "com.google.android.gms:play-services-location:${GOOGLE_LOCATION_PLAY_SERVICES_VERSION}"
     implementation "com.android.support:support-core-utils:${ANDROID_SUPPORT_V4_VERSION}"
   }
 
