variable issue fixed

--- a/src/android/frameworks/pgm-custom.gradle
+++ b/src/android/frameworks/pgm-custom.gradle
@@ -86,6 +86,7 @@ android {
   }
 
   def PLAY_SERVICES_VERSION = props.get("GOOGLE_MAPS_PLAY_SERVICES_VERSION")
+  def GOOGLE_LOCATION_PLAY_SERVICES_VERSION = props.get("GOOGLE_LOCATION_PLAY_SERVICES_VERSION")
   def ANDROID_SUPPORT_V4_VERSION = props.get("ANDROID_SUPPORT_V4_VERSION")
   println("---->PLAY_SERVICES_VERSION = ${PLAY_SERVICES_VERSION}")
   println("---->ANDROID_SUPPORT_V4_VERSION = ${ANDROID_SUPPORT_V4_VERSION}")
